New feautures add and some changes
